<?xml version="1.0"?>
<package>
  <name>radmap_point_clouds</name>
  <version>0.0.0</version>
  <description>Preprocessing, coordinate frame calibration, configuration files, and launching procedure used to generate point clouds with Google Cartographer for the RadMAP acquisition system. The RadMAP acquisition system consists of two LIDARS, differential GPS, two Ladybug 360 cameras, and an IMU.</description>
  <maintainer email="brian.nemsick@gmail.com"> Brian Nemsick </maintainer>
  <license> BSD </license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>rosbag</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>rosbag</run_depend>
</package>